--- a/JobTracker/wwwroot/css/index.css
+++ b/JobTracker/wwwroot/css/index.css
@@ -11,67 +11,18 @@ body {
     
     margin: 30px auto;
     padding: 20px;
+    margin:10px;
     background-color: #ffffff;
     box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     border-radius: 10px;
-}
-
-/* Formulär */
-form {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 30px;
-    justify-content:space-around;
-    align-items:center;
+    min-height:800px;
     
 }
+.text-center h2{
+    padding-bottom:20px;
+}
 
-    form label {
-        
-        font-weight: bold;
-        text-align:center;
-        align-items:center;
-    }
-    
-    form input,
-    
-    form select {
-        padding: 10px;
-        margin-top: 5px;
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        font-size: 1rem;
-    }
 
-        form input:focus,
-        form select:focus {
-            outline: none;
-            border-color: #007BFF;
-            box-shadow: 0 0 5px rgba(0,123,255,0.5);
-        }
-
-    form span {
-        color: red;
-        font-size: 0.9rem;
-    }
-
-    form button {
-        margin-top: 20px;
-        padding: 12px;
-        background-color: #007BFF;
-        color: #fff;
-        font-weight: bold;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        
-    }
-
-        form button:hover {
-            background-color: #0056b3;
-            transform: translateY(-2px);
-        }
 
 /* Lista över jobb */
 h2 {
@@ -114,18 +65,27 @@ ul {
 
 .jobs-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     gap: 20px;
     margin-top: 20px;
 }
 
+    .jobs-grid a {
+        color: black;
+        text-decoration: none;
+    }
+
 .job-card {
-    background-color: #fff;
-    padding: 15px;
+    height: 30px;
+    padding-left:10px;
     
+    display: flex;
+    color: black;
+    text-decoration: none;
     border-radius: 10px;
     box-shadow: 0 4px 10px 4px rgba(0,0,0,0.1);
     transition: transform 0.2s, box-shadow 0.2s;
+    
 }
 
     .job-card:hover {
@@ -136,32 +96,51 @@ ul {
     
 
     .job-card p {
-        margin: 5px 0;
-        font-size: 0.95rem;
+       padding-left:10px;
+       margin-bottom:0;
     }
 .index-section{
     display:flex;
     flex-direction:row;
+    
 }
 
 .columns{
-    min-width:500px;
+    width:100%;
     margin:5px;
 }
-.applied {
-    background-color: #d7ecd9; 
 
+.rejected{
+    
 
+    
 }
 
-.interview {
-    background-color: #fff9d6; 
+
+
+.tags {
+    padding: 10px;
+    color: black;
+    text-decoration: none;
+    font-size: 20px;
+    
+    border-radius: 10px;
+    margin: 10px;
+    width: 300px;
+   
 }
 
-.offer {
-    background-color: #ffe8d6; 
+    .tags:hover {
+        background-color: gray;
+    }
+.red {
+    background-color: #ff9999; /* ljusare röd */
 }
 
-.rejected {
-    background-color: #f9d6d6;
+.green {
+    background-color: #99e699; /* ljusare grön */
+}
+
+.yellow {
+    background-color: #fff59d; /* ljusare gul */
 }
