--- a/JobTracker/wwwroot/css/site.css
+++ b/JobTracker/wwwroot/css/site.css
@@ -21,11 +21,25 @@ body {
   margin-bottom: 60px;
 }
 
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-  color: var(--bs-secondary-color);
-  text-align: end;
+.save-btn {
+    text-decoration:none;
+    color:black;
+    
+    padding: 0px 100px;
+    
+    border: none;
+    cursor: pointer;
+    
+    font-size: 1.5rem;
+    display: block;
+    
+    transition: background 0.2s;
 }
 
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-  text-align: start;
+    .save-btn:hover {
+        background-color: lightsteelblue;
+    }
+
+.head-class{
+    display:flex;
 }
