--- a/JobTracker/Pages/Shared/_Layout.cshtml
+++ b/JobTracker/Pages/Shared/_Layout.cshtml
@@ -5,31 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - JobTracker</title>
     <script type="importmap"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/JobTracker.styles.css" asp-append-version="true" />
+    
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="head-class">
-                <a class="save-btn" asp-page="Index">Index</a>
-                <a class="save-btn" asp-page="/FormComponent">
-                    Lägg Till
-                </a>
+
+        <div class="head-class">
+            <a  asp-page="Index">
+                Home
+            </a>
+            <a asp-page="/FormComponent">
+                Add
+                 
+            </a>
                
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    
-                </div>
-            </div>
-        </nav>
+               
+        </div>
+        
     </header>
     <div >
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
