--- a/JobTracker/wwwroot/css/index.css
+++ b/JobTracker/wwwroot/css/index.css
@@ -17,11 +17,45 @@ body {
     min-height: 800px;
     margin-bottom: 10px;
 }
-.text-center h2{
-    padding-bottom:20px;
+.filter-div{
     text-align:left;
-    font-weight:600;
-    font-size:24px;
+    padding:5px;
+}
+
+.filter-div select {
+    border-radius:10px;
+}
+.text-center h2 {
+    padding-bottom: 20px;
+    text-align: left;
+    font-weight: 600;
+    font-size: 24px;
+    padding-left:20px;
+}
+.number-count {
+    opacity:0.7;
+    font-size:20px;
+    font-weight:400;
+}
+.titleFilter {
+    border-radius: 8px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    background-color: white;
+    font-size: 14px;
+    appearance: none; /* Tar bort OS-standardutseendet */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+.maxJobs {
+    border-radius: 8px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    background-color: white;
+    font-size: 14px;
+    appearance: none; /* Tar bort OS-standardutseendet */
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 select#sortSelect {
     border-radius: 8px;
@@ -95,27 +129,26 @@ ul {
     }
 
 .job-card {
-    display: block; /* säkerställ att länken beter sig som block */
+    display: flex; 
     margin-bottom: 10px;
     text-decoration: none;
     color: inherit;
-    
-    height: 50px;
+    height: 60px;
     font-size: 16px;
     padding: 10px;
-    border-radius: 5px; /* mjuka hörn om du vill */
-    align-items;
-    center;
+    border-radius: 10px; 
+    align-items: center;
     transition: transform 0.2s, box-shadow 0.2s;
+    
 }
 
     .job-card:hover {
-        transform: translateX(5px); /* liten hover-effekt */
+        transform: translateX(5px); 
         box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
 
 .job-card-small {
-    display: block; /* säkerställ att länken beter sig som block */
+    display: block;
     margin-bottom: 10px;
     text-decoration: none;
     color: inherit;
@@ -134,23 +167,29 @@ ul {
 .flex-div {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    text-align: left;
     gap: 10px; /* lite space mellan title och company */
-    margin-bottom:0;
+    margin-bottom: 0;
+    justify-content: space-between;
 }
-.flex-div p{
-    margin-bottom:0;
-}
+    .flex-div p {
+        margin-bottom: 0;
+        align-items: center;
+        text-align: left;
+    }
+
     
 
     .job-card p {
-       padding-left:10px;
+       
        margin-bottom:0;
     }
-.index-section{
-    display:flex;
-    flex-direction:row;
-    margin:0;
+.index-section {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+    position: relative;
+    z-index: 10;
 }
 
 .columns{
@@ -240,3 +279,85 @@ ul {
     margin-left: 10px;
     z-index:100;
 }
+
+.form-add{
+    display:block;
+}
+
+.form-add-remove{
+    display:flex;
+}
+
+.form-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 200px;
+    padding: 30px;
+    z-index: 9999;
+    width: 90%;
+    margin: 100px;
+    background-color: lightgray;
+    
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2); /* valfritt */
+}
+
+.form-div {
+    background-color:white;
+    width: 100%;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+    .form-group label {
+        margin-bottom: 5px;
+        font-weight: 600;
+        padding-left: 5px;
+    }
+
+    .form-group input,
+    .form-group select {
+        padding: 12px;
+        border-radius: 8px;
+        border: 1px solid #ccc;
+        font-size: 16px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+form span {
+    color: red;
+    font-size: 0.9rem;
+    padding-left: 5px;
+}
+
+form button {
+    margin-top: 1rem;
+    padding: 12px;
+    border-radius: 25px;
+    background-color: cornflowerblue;
+    color: white;
+    font-weight: bold;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+    form button:hover {
+        background-color: royalblue;
+    }
